tests/fixtures/invalid/pow_bool_float_str.py
# Cannot call pow() with Bool, Float, Str
x = pow(True, 1.0, "hello")
